--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "serverless": "^1.75.1",
     "serverless-offline": "^6.5.0",
-    "serverless-plugin-typescript": "^1.1.9"
+    "serverless-plugin-typescript": "^1.1.9",
+    "typescript": "^3.9.7"
   }
 }
