--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "deploy": "serverless deploy"
   },
   "dependencies": {
-    "graphql-yoga": "^1.18.3"
+    "graphql-yoga": "^1.18.3",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.5.7",
+    "dotenv": "^8.2.0",
     "serverless": "^1.75.1",
     "serverless-offline": "^6.5.0",
     "serverless-plugin-typescript": "^1.1.9",
