--- a/serverless.yml
+++ b/serverless.yml
@@ -4,12 +4,14 @@ plugins:
   - serverless-plugin-typescript
   - serverless-offline
 
+custom:
+  serverless-offline:
+    httpPort: 4000
+
 provider:
   name: aws
   runtime: nodejs12.x
   region: ap-southeast-2
-  environment:
-    TMDB_API_KEY: ${env:TMDB_API_KEY}
 
 functions:
   graphql:
